# website_projects

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  README_pipenv.md  condition_do.ipynb  environment.yml  eva.ipynb  pixi.toml  proposal.md  pyproject.toml
.cursor/rules/: blog_formatter.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  pipenv.yml
LaTex/: dirac_2_shpere.Rmd
Presentations/amld_2025/: amld_2025.html  amld_2025.qmd
Presentations/bayes_time_series_causal_inference/: bayes_time_series_causal_inference.html  bayes_time_series_causal_inference.qmd  bayes_time_series_causal_inference.quarto_ipynb
Presentations/berlin_bayesians_clv/: README.md  berlin_bayesians_btyd.html  berlin_bayesians_btyd.qmd
Presentations/berlin_experimentation/: berlin_experimentation.html  berlin_experimentation.qmd
Presentations/causal_data_science_2025/: causal_data_science_meeting_2025_abstract.md
Presentations/causal_inference_example/: causal_inference_example.html  causal_inference_example.qmd  causal_inference_example_presentation.html  causal_inference_example_presentation.qmd
Presentations/economic_forecasting_2025/: probabilistic_forecasting_at_scale_numpyro.qmd  probabilistic_forecasting_at_scale_numpyro.quarto_ipynb
Presentations/gyg/: gyg.html  gyg.qmd
Presentations/hsgp_intro/: hsgp_intro.html  hsgp_intro.qmd
Presentations/intro_hierarchical_models/: README.md  intro_hierachical_models.html  intro_hierachical_models.qmd  intro_hierarchical_models.html  intro_hierarchical_models.qmd
Presentations/machine_learning_week_2023/: revenue_retention_presentation.html  revenue_retention_presentation.qmd
Presentations/marketing_bayes_webinar/: README.md  marketing_bayes.html  marketing_bayes.qmd
Presentations/mmm/: mmm.html  mmm.qmd
Presentations/paretos/: probabilistic_forecasting.html  probabilistic_forecasting.qmd
Presentations/probabilistic_forecasting/: probabilistic_forecasting.html  probabilistic_forecasting.qmd
Presentations/pycon_de_2026/: causal_inference_ppl.html  causal_inference_ppl.qmd
Presentations/pyconco2022/: README.md  pyconco22_orduz.html  pyconco22_orduz.qmd  pymc_lr.md
Presentations/pydata_2018/: orduz_pydata_2018.aux  orduz_pydata_2018.bbl  orduz_pydata_2018.blg  orduz_pydata_2018.nav  orduz_pydata_2018.out  orduz_pydata_2018.snm  orduz_pydata_2018.tex  orduz_pydata_2018.toc  references.bib
Presentations/pydata_2019/: orduz_pydata_2019.aux  orduz_pydata_2019.bbl  orduz_pydata_2019.blg  orduz_pydata_2019.nav  orduz_pydata_2019.out  orduz_pydata_2019.tex  orduz_pydata_2019.toc  references.bib
Presentations/pydata_2021/: orduz_pydata_2021.tex  references.bib
Presentations/pydata_2022/: README.md  REAMDE.md  intro_uplift.html  intro_uplift.md
Presentations/pydata_2023/: revenue_retention.html  revenue_retention.qmd  revenue_retention_presentation.html  revenue_retention_presentation.qmd
Presentations/pydata_2024/: hsgp_intro.html  hsgp_intro.qmd
Presentations/pydata_2025/: intro_svi.html  intro_svi.qmd
Presentations/pydata_amsterdam_2024/: timeseries_numpyro.html  timeseries_numpyro.qmd
Presentations/satRday19/: orduz_satRday19.Rpres  orduz_satRday19.html  orduz_satRday19.md
Presentations/second_symposium_machine_learning_dynamical_systems/: orduz_2020.aux  orduz_2020.bbl  orduz_2020.blg  orduz_2020.nav  orduz_2020.out  orduz_2020.pytxcode  orduz_2020.tex  orduz_2020.toc  orduz_2020.vrb  references.bib
Python/: arma_numpyro.ipynb  bayesian_cuped.ipynb  bayesian_decision_theory_workflow_numpyro.ipynb  bayesian_power_ab_testing.ipynb  bg_nbd_pymc.ipynb  bg_nbg_pymc.ipynb  bikes_pymc.ipynb  birthdays.ipynb  bootstrap.ipynb  c.ipynb  cate_nn.ipynb  causal_inference_example.ipynb  causal_inference_logistic.ipynb  causal_inference_negative_binomial.ipynb  censoring.ipynb  ci_multilevel.ipynb  clv_gp.ipynb  clv_gp_numpyro.ipynb  clv_gp_pymc.py  cohort_modeling.ipynb  collider_bias.py  cookies_example_numpyro.ipynb  croston_numpyro.ipynb  crps.ipynb  demand.ipynb  distance_to_rectangle.md  elasticities.ipynb  electricity_forecast_with_priors.ipynb  exponential_smoothing_numpyro.ipynb  fb_prophet.ipynb  fixed_random.ipynb  flax_numpyro.ipynb  formula_transformer.ipynb  gamma_gamma.ipynb  gaussian_process_regression.ipynb  gaussian_process_time_series.ipynb  geo_mmm_pymc.ipynb  germany_plot.ipynb  glm_pymc3.ipynb  gp_tfp.ipynb  (+76 more)
Python/cohort-revenue-retention/: hm-pymc-marketing.ipynb  hm-transactions.ipynb  kod-pymc-marketing.ipynb  kt_weekly-pymc-marketing.ipynb  kt_weekly-pymc-marketing.py
Python/dev/: lkj_prior_vect.py
Python/movie_plots_text_gen_model/: tokenizer
Python/scripts/: sphere.py
R/: bump_func.Rmd  class_imbalance.Rmd  curse_dim.Rmd  curse_dim2.Rmd  intro_plumber_nb.md  laplacian_2torus.Rmd  mmm_dag.R  plebiscito_tweets_1.Rmd  r_circle_fit.Rmd  spec_thm_matrices.Rmd  vol_d_ball.Rmd
data/: iphone_trends.csv  kitas_data.geojson  mmm_roas_data.csv  multilevel_elasticities_single_sku_data.csv  retention_data.csv  retention_user_no_season_cohort.csv  retention_user_no_season_transactions.csv  retention_user_strong_season_cohort.csv  retention_user_strong_season_transactions.csv  sales.csv  sales_dag.csv  sts_sample_data.csv
docs/cohort_revenue_retention/: cohort_revenue_retention.tex  references.bib
docs/cohort_revenue_retention_v2/: cohort_revenue_retention.tex  references.bib
(+25 files in other folders)
