[project]
authors = [{ name = "juanitorduz", email = "juanitorduz@gmail.com" }]
dependencies = []
description = "Website projects"
name = "website_projects"
requires-python = ">= 3.11"
version = "0.1.0"
readme = "README.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.feature.core.dependencies]
arviz = ">=0.19.0"
bambi = ">=0.13.0"
econml = "*"
nutpie = "*"
orbit-ml = ">=1.1.4.9"
pymc = ">=5.15.1"
pymc-bart = ">=0.5.14"
shap = "*"

[tool.pixi.feature.core.pypi-dependencies]
bayeux-ml = "*"
blackjax = ">=1.2.2"
category-encoders = "*"
darts = "*"
daft = "*"
datasetsforecast = "*"
dynamax = "*"
dowhy = "*"
equinox = "*"
flax = "*"
geopandas = "*"
graphviz = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
jax = ">=0.4.30"
jaxlib = ">=0.4.30"
jaxopt = "*"
jaxtyping = "*"
Lifetimes = "==0.11.3"
lightgbm = "*"
linearmodels = ">=6.0"
mapie = ">=0.8.6"
matplotlib = ">=3.9.0"
mlforecast = "*"
networkx = "*"
numpyro = ">=0.15.2"
openpyxl = "*"
pandas = ">=2.2.2"
pgmpy = "*"
polars = ">=1.4.0"
preliz = "*"
pydantic = ">=2.8"
pymc-experimental = ">=0.1.0"
pyro-ppl = ">=1.9.1"
seaborn = ">=0.13.2"
scikit-learn = ">=1.5.1"
scikit-uplift = "*"
snowflake-sqlalchemy = "*"
statsforecast = "*"
statsmodels = ">=0.14.2"
tensorflow = ">=2.15"
tensorflow-probability = ">=0.24.0"
tfp-causalimpact = "*"
utilsforecast = "*"
xgboost = "*"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"
rich = "*"
ruff = "*"
watermark = "*"

[tool.pixi.environments]
default = ["core", "devtools"]

[tool.ruff]
# See https://beta.ruff.rs/docs/rules/ for complete list of rules.
# Note: please keep this in sorted order
lint.select = [
    "ASYNC", # flake8-async (ASYNC)
    "B",     # flake-bugbear
    "C",     # ?
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "F",     # pyflakes
    "FIX",   # flake8-fixme
    "FBT",   # flake8-boolean-trap
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PD",    # pandas-vet
    "PIE",   # flake8-pie
    # "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgdrade
    "W",   # pycodestyle
]
lint.extend-select = ["I"]
# automatically fix all issues ruff is cabable of AND which are enabled via select
lint.fixable = ["ALL"]
target-version = "py312"

extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"Python/bg_nbd_pymc.ipynb" = ["N"]
