[project]
authors = [{ name = "juanitorduz", email = "juanitorduz@gmail.com" }]
dependencies = []
description = "Website projects"
name = "website_projects"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"
readme = "README.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.feature.core.dependencies]
arviz = ">=0.21.0"
bambi = ">=0.15.0"
dowhy = "*"
econml = "*"
equinox = "*"
flax = "*"
geopandas = "*"
graphviz = "*"
ipykernel = "*"
ipython = "*"
ipywidgets = "*"
jaxopt = "*"
jaxtyping = "*"
lightgbm = "*"
linearmodels = ">=6.0"
mapie = ">=0.8.6"
matplotlib = ">=3.9.0"
mlforecast = "*"
networkx = "*"
nutpie = "*"
orbit-ml = ">=1.1.4.9"
pandas = ">=2.2.3"
preliz = "*"
pymc = ">=5.20.0"
pymc-bart = ">=0.5.14"
pyro-ppl = ">=1.9.1"
scikit-learn = ">=1.5.2"
seaborn = ">=0.13.2"
shap = "*"
statsmodels = ">=0.14.4"
torchvision = "*"

[tool.pixi.feature.core.pypi-dependencies]
bayeux-ml = "*"
beartype = "*"
blackjax = ">=1.2.5"
category-encoders = "*"
daft = "*"
darts = "*"
datasetsforecast = "*"
dynamax = "*"
funsor = "*"
numpyro = ">=0.18.0"
openpyxl = "*"
pgmpy = "*"
polars = ">=1.4.0"
pydantic = ">=2.8"
pyfixest = "*"
pymc-experimental = ">=0.1.0"
scikit-uplift = "*"
snowflake-sqlalchemy = "*"
statsforecast = "*"
tensorflow-probability = ">=0.25.0"
tfp-causalimpact = "*"
utilsforecast = "*"
xgboost = "*"
dm-tree = "==0.1.8"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"
rich = "*"
ruff = "*"
watermark = "*"

[tool.pixi.environments]
default = ["core", "devtools"]

[tool.ruff]
# See https://beta.ruff.rs/docs/rules/ for complete list of rules.
# Note: please keep this in sorted order
lint.select = [
    "ASYNC", # flake8-async (ASYNC)
    "B",     # flake-bugbear
    "C",     # ?
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "F",     # pyflakes
    "FIX",   # flake8-fixme
    "FBT",   # flake8-boolean-trap
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PD",    # pandas-vet
    "PIE",   # flake8-pie
    # "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgdrade
    "W",   # pycodestyle
]
lint.extend-select = ["I"]
lint.ignore = ["F722"]
# automatically fix all issues ruff is cabable of AND which are enabled via select
lint.fixable = ["ALL"]
target-version = "py311"

extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
"Python/bg_nbd_pymc.ipynb" = ["N"]
